﻿$Revision$
	$Author$ $Date$
	
#Revision: 1398
	formirror 2010-02-18 21:20:46 +0300 (Чт, 18 фев 2010)
	- makefile.hrc: поддержка nmake, убрал makefile.old.hrc
	- reg.hrc: bugfix
	- diff.hrc: patch
	- проставил 'firstlines' для cpp, d и xslt
	- добавил commons-net в javalib: без нее ант собирается неправильно.
	
#Revision: 1349 
	formirror 2010-02-10 03:10:19 +0300 (Ср, 10 фев 2010) 
	Реструктуризация
	- Теперь ant обращается к схемам через XMLcatalog.
	- Убирается все из hrc/auto. Теперь там будет только то, что положит туда юзер.
	
#Revision: 1319 
	formirror Date: 2010-02-06 15:34:40 +0300 (Сб, 06 фев 2010) 
	1. Фиксим hrc
	1.1 awk.hrc -> scripts, +regexp
	1.2 reg.hrc
	1.3 far.hrc - +XML, +callplugin, +\ или \\ в реестре
	1.4 macro.hrc - А он вообще используестя, или как?
	1.5 c.hrc - форматорование строк и ссылки на системные переменные в них...
	2. Восстановил esc.hrc 
	2.1 Этот плагин проклят. Его поддержка исчезает из колорера уже в 3 или 4 раз.
	2.2 А сейчас убили не только его, но и из far.hrc удалили всякую поддержку XML. Пришлось ставить на место.
	3. Обновил тесты.
	3.1 Тексты в кодировке UTF-16 svn считает бинарными файлами. Править ему mime-type на text не рискнул, во избежание глюков...
	
#Revision: 1306 
	formirror 2010-02-05 04:55:39 +0300 (Пт, 05 фев 2010)
	1. Слил с моей старой веткой.
	1.1 svn merge упорно не хотело идти раньше r1215, так что r1214 пришлось копировать ручками
	1.2 а затем сообщил об артефактных удалениях файлов
	2. Слил с транком (1192, 1242+)
	2.1 svn merge глючит по черному...
	
#Revision: 1304 
	formirror 2010-02-05 02:08:17 +0300 (Пт, 05 фев 2010) 
	0. Теперь это моя ветка.
	1. Убрал -nostartfiles. Под gcc все равно не комплияется,в отличии от транка...
	2. Восстановил валидный test/hrc/valid/xml/build.xml.html
	3. Автоматизировал подстановку значений для этого файла (и +BOM). Посмотрим, что получится...
	4. Правлю hrc...